force-app/main/default/objects/Habilidad_del_contacto__c/Habilidad_del_contacto__c.object-meta.xml
<CustomObject>
    <description>Contendra todas las habilidades y/o conocimientos con los que cuenta el contacto</description>
    <label>Habilidad del contacto</label>
    <nameField>
        <displayFormat>HC-{00000}</displayFormat>
        <label>Nombre</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Habilidades del contacto</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>