force-app/main/default/objects/Habilidad_del_contacto__c/fields/Candidato__c.field-meta.xml
<CustomField>
    <fullName>Candidato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidato</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Lead.RecordType.Name</field>
            <operation>equals</operation>
            <value>Candidato E-Volution</value>
        </filterItems>
        <filterItems>
            <field>Lead.RecordType.Name</field>
            <operation>equals</operation>
            <value>Candidato Salesforce</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Habilidades del candidato</relationshipLabel>
    <relationshipName>Habilidades_del_contacto</relationshipName>
    <type>Lookup</type>
</CustomField>