force-app/main/default/objects/Habilidad_del_contacto__c/fields/Contacto__c.field-meta.xml
<CustomField>
    <fullName>Contacto__c</fullName>
    <description>contacto que se asignara dicha habilidad</description>
    <label>Contacto</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Habilidades del contacto</relationshipLabel>
    <relationshipName>Habilidades_del_contacto</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>