force-app/main/default/objects/Habilidad_del_contacto__c/fields/Habilidad__c.field-meta.xml
<CustomField>
    <fullName>Habilidad__c</fullName>
    <description>habilidad que le sera asignada al contacto</description>
    <label>Habilidad</label>
    <referenceTo>Habilidad__c</referenceTo>
    <relationshipLabel>Habilidades del contacto</relationshipLabel>
    <relationshipName>Habilidades_del_contacto</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>